[gd_scene load_steps=5 format=3 uid="uid://bxyfv6ymfvhmo"]

[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/pistol/pistol.gd" id="1_nftap"]
[ext_resource type="Texture2D" uid="uid://2lq4l0b3n1xm" path="res://art/Custom/pistol.png" id="2_d17ff"]
[ext_resource type="AudioStream" uid="uid://db0pjn783t3r3" path="res://sfx/SCI-FI_UI_SFX_PACK/Click Combos/Click_Combo_5_Pitched_Up.wav" id="3_brn1i"]
[ext_resource type="AudioStream" uid="uid://b6ov5baodc04m" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_And_Laser_Gun/Laser_2.wav" id="4_eck86"]

[node name="pistol" type="Node2D"]
script = ExtResource("1_nftap")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_d17ff")

[node name="SFX" type="Node" parent="."]

[node name="readySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_brn1i")
bus = &"SFX"

[node name="shootSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_eck86")
volume_db = -10.0
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
